--- a/app/views/static_pages/contact.html.erb
+++ b/app/views/static_pages/contact.html.erb
@@ -1,3 +1,6 @@
-<%provide(:title, 'Contact')%>
+<% provide(:title, 'Contact') %>
 <h1>Contact</h1>
-<p>Please contact us! We're ever so desparate for friends! RAWRRRRRRRRRR</p>
+<p>
+  Contact Ruby on Rails Tutorial about the sample app at the
+  <a href="http://railstutorial.org/contact">contact page</a>.
+</p>
